<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="android.tapmisam.az.testregister.RegisterActivity">


    <include
        layout="@layout/content_register" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/pacifoco_regular"
        android:gravity="bottom|center"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/titleTextView"
        app:srcCompat="@drawable/find_white" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/white_total"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/white_total" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white_total"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/white_total" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:drawablePadding="8dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white_total"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_surname"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:drawablePadding="8dp"
                android:backgroundTint="@color/white_total"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:drawablePadding="8dp"
                android:backgroundTint="@color/white_total"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:hint="@string/number"
                android:inputType="textPersonName"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/montserrat"
        android:padding="15dp"
        android:text="@string/signup"
        android:textColor="@color/white_total"
        android:textStyle="bold" />


</RelativeLayout>
