<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="android.tapmisam.az.testregister.LoginActivity">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/pacifoco_regular"
        android:gravity="bottom|center"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:text="@string/title"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/find_white" />

    <EditText
        android:id="@+id/verifyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/have_not_account"
        android:textColor="@color/white_total" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/white_total" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/colorPrimary"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/white_total" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/verifyEditText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="82dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/montserrat"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:text="@string/title_activity_login"
        android:textColor="@color/white_total"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/verifyEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />


</RelativeLayout>
