<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context="android.tapmisam.az.testregister.LoseFragment"
    tools:layout_editor_absoluteY="81dp">


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/myImageView"
        android:layout_width="192dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="124dp"
        android:layout_marginTop="16dp"
        android:src="@color/white_total"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toTopOf="@+id/titleEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--<ImageView-->
    <!--android:id="@+id/myImageView"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:src="@color/image_back" />-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/buttonChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="bottom|right"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="23dp"
        android:src="@drawable/ic_add_a_photo_black_24dp"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageView" />

    <!--</LinearLayout>-->

    <!--<LinearLayout-->
    <!--android:id="@+id/viewB"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_weight="0.5"-->
    <!--android:background="@color/colorAccent"-->
    <!--android:orientation="vertical">-->


    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"

        android:background="@color/white_total"
        android:backgroundTint="@color/white_total"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/item_title"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="@color/hint_input"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEdittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myImageView" />

    <EditText
        android:id="@+id/descriptionEdittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/white_total"
        android:backgroundTint="@color/white_total"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/item_description"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColorHint="@color/hint_input"
        app:layout_constraintBottom_toTopOf="@+id/buttonUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <!--<EditText-->
    <!--android:id="@+id/locationEditText"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:fontFamily="@font/montserrat"-->

    <!--android:layout_marginTop="15dp"-->
    <!--android:textColorHint="@color/hint_input"-->
    <!--android:padding="8dp"-->
    <!--android:background="@color/white"-->
    <!--android:backgroundTint="@color/white"-->
    <!--android:ems="10"-->
    <!--android:hint="Location"-->
    <!--android:inputType="textPersonName" />-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/locationFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="59dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="61dp"
        android:clickable="true"
        android:src="@drawable/ic_my_location_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonUpload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEdittext" />

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="17dp"
        android:background="@android:color/background_light"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/montserrat"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        android:text="@string/upload_post"
        android:textColor="@color/white_total"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEdittext" />


</android.support.constraint.ConstraintLayout>


