<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="fds"
            android:foregroundGravity="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/montserrat"
            android:padding="20dp"
            android:text="@string/info_item"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/item_color"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_description"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp" />

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/placeTileTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/montserrat"
            android:padding="20dp"
            android:text="@string/info_place"

            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/item_color"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/place_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp">


            <TextView
                android:id="@+id/placeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/showPlaceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_location_on_black_24dp" />


        </android.support.v7.widget.CardView>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/montserrat"
            android:padding="20dp"
            android:text="@string/info_contact"

            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/item_color"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/info_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp">


            <TextView
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/phoneImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_phone_24dp" />


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/card_view_contact_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/emailImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_email_24dp" />


            <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="horizontal"-->
            <!--android:padding="10dp">-->


            <!--</LinearLayout>-->
        </android.support.v7.widget.CardView>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>